--- a/style.css
+++ b/style.css
@@ -86,7 +86,7 @@ body {
 
 #birth-date,#lucky-number {
     width:130px;
-    padding: 5px 40px;
+    padding: 10px 40px;
     border-bottom: 3px solid black;
     border-left: 1px solid black;
     border-top: 1px solid black;
@@ -107,7 +107,7 @@ body {
 
 .check-btn{
     margin: 20px auto;
-    padding: 5px 30px;
+    padding: 10px 30px;
     border-bottom: 3px solid black;
     border-left: 1px solid black;
     border-top: 1px solid black;
@@ -117,6 +117,7 @@ body {
     font-weight: 600;
     background-color: #cc6d6d;
     transform: translateY(-10px);
+    font-size: larger;
 }
 
 .check-btn:hover{
