--- a/style.css
+++ b/style.css
@@ -81,7 +81,7 @@ body {
     margin: 30px auto 10px;
     font-weight: 600;
     text-align: center;
-    font-size: larger;
+    font-size: 1.5rem;
 }
 
 #birth-date,#lucky-number {
