Refactor:- change footer style

--- a/style.css
+++ b/style.css
@@ -151,12 +151,12 @@ body {
 .socialmedia {
     position: fixed;
   bottom: 0;
-  left: 39%;
     box-sizing: border-box;
     display: flex;
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
+    width: 100%;
 }
 
 
