--- a/style.css
+++ b/style.css
@@ -73,7 +73,7 @@ body {
     box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.2);
 }
 
-.input-container{
+.input-container {
     transform: translateY(-20px);
 }
 
@@ -84,8 +84,9 @@ body {
     font-size: 1.5rem;
 }
 
-#birth-date,#lucky-number {
-    width:130px;
+#birth-date,
+#lucky-number {
+    width: 130px;
     padding: 10px 40px;
     border-bottom: 3px solid black;
     border-left: 1px solid black;
@@ -97,15 +98,17 @@ body {
     background-color: #f8d6d6;
 }
 
-#birth-date,#lucky-number:focus{
+#birth-date,
+#lucky-number:focus {
     outline: none;
 }
 
-#birth-date:hover,#lucky-number:hover{
+#birth-date:hover,
+#lucky-number:hover {
     box-shadow: 2px 2px 2px 3px rgba(0, 0, 0, 0.2);
 }
 
-.check-btn{
+.check-btn {
     margin: 20px auto;
     padding: 10px 30px;
     border-bottom: 3px solid black;
@@ -120,18 +123,19 @@ body {
     font-size: larger;
 }
 
-.check-btn:hover{
+.check-btn:hover {
     box-shadow: 2px 2px 2px 3px rgba(0, 0, 0, 0.2);
 }
 
-.error-message{
+.error-message {
     margin: 10px auto;
-  font-weight: 700;
-  font-size: 1.5rem;
-  color: red;
+    font-weight: 700;
+    font-size: 1.5rem;
+    color: red;
 }
 
-.unlucky-number-message,.lucky-number-message{
+.unlucky-number-message,
+.lucky-number-message {
     text-align: center;
     margin: 10px auto;
     font-weight: 700;
@@ -139,18 +143,19 @@ body {
     transform: translateY(-20px);
 }
 
-.lucky-number-message{
-    color:green;
-   
+.lucky-number-message {
+    color: green;
+
 }
-.unlucky-number-message{
+
+.unlucky-number-message {
     color: #8b0f0f;
 }
 
 
 .socialmedia {
     position: fixed;
-  bottom: 0;
+    bottom: 0;
     box-sizing: border-box;
     display: flex;
     flex-wrap: wrap;
