--- a/style.css
+++ b/style.css
@@ -33,8 +33,8 @@ body {
     color: #aa6c5b;
     padding: 10px 50px;
     border-bottom: 3px solid black;
-    border-left: 1px solid black;
-    border-top: 1px solid black;
+    border-left: 1px solid #881d1d;
+    border-top: 1px solid #af4040;
     border-right: 3px solid black;
     border-radius: 10px;
 }
@@ -54,8 +54,8 @@ body {
     letter-spacing: 1px;
     cursor: pointer;
     border-bottom: 3px solid black;
-    border-left: 1px solid black;
-    border-top: 1px solid black;
+    border-left: 1px solid #881d1d;
+    border-top: 1px solid #af4040;
     border-right: 3px solid black;
     border-radius: 10px;
 }
@@ -89,8 +89,8 @@ body {
     width: 130px;
     padding: 10px 40px;
     border-bottom: 3px solid black;
-    border-left: 1px solid black;
-    border-top: 1px solid black;
+    border-left: 1px solid #881d1d;
+    border-top: 1px solid #af4040;
     border-right: 3px solid black;
     border-radius: 10px;
     font-family: 'Josefin Sans', sans-serif;
@@ -112,8 +112,8 @@ body {
     margin: 20px auto;
     padding: 10px 30px;
     border-bottom: 3px solid black;
-    border-left: 1px solid black;
-    border-top: 1px solid black;
+    border-left: 1px solid #881d1d;
+    border-top: 1px solid #af4040;
     border-right: 3px solid black;
     border-radius: 10px;
     font-family: 'Josefin Sans', sans-serif;
